--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="./models/UserInfoReadModelForUpdate.js"></script>
         <script src="./models/BriefUserInfoReadModel.js"></script>
         <script src="./models/DetailedUserInfoReadModel.js"></script>
-        <script src="./models/PageOfUserInfo.js"></script>
+        <script src="./models/PageOfBankAccounts.js"></script>
 
         <script src="./view/fragments/Home.js"></script>
         <script src="./view/fragments/OpeningBankAccount.js"></script>
